2005-01-22  Steve Harris  <steve@plugin.org.uk>

	* address.c: fixed bug when determining protocol of URL with
	  unspecified sub-protocol. Reported by Pix.

2005-01-13  Steve Harris  <steve@plugin.org.uk>

	* bundle.c: patch from Dave Robillard that fixes bundles of more than 4
	  messages.

2005-01-13  Steve Harris  <steve@plugin.org.uk>

	* message.c: made the arguments to _add_string and _add_symbol const
	  char * for C++ compatibility.

2005-01-10  Steve Harris  <steve@plugin.org.uk>

	* message.c: added a source field that represents the source from which
	  a message was received. Useful in method handlers to determine which
	  client sent the message.

2004-12-21  Steve Harris  <steve@plugin.org.uk>

	* server.c: added patch from Walco van Loon and Pix that fixes a bug
	  in the hostname detection fallback code

2004-11-19  Steve Harris  <steve@plugin.org.uk>

	* send.c: added lo_send_timestamped()

2004-11-17  Steve Harris  <steve@plugin.org.uk>

	* server.c: added code to handle bundle reception
	* bundle.c: code to build bundle objects
	* timetag.c: code to manipulate and test timetags

2004-10-19  Steve Harris  <steve@plugin.org.uk>

	Release 0.13
	* lo.h: removed reference to obsolete header lo_backcompat.h

2004-10-17  Steve Harris  <steve@plugin.org.uk>

	* lo_server.c: added code to allow servers to poll() on the server
	  socket, if available. From Sean Bolton.

2004-08-27  Steve Harris  <steve@plugin.org.uk>

	* lo_lowlevel.h, send.c: added OSX compatibility fixes from Taybin
	  Rutkin.

2004-08-19  Steve Harris  <steve@plugin.org.uk>

	Release 0.9
	* testlo.c: added more URL tests

2004-08-19  Steve Harris  <steve@plugin.org.uk>

	* address.c: more bugfixes to URL handling

2004-08-02  Steve Harris  <steve@plugin.org.uk>

	* server.c, address.c: fixed bugs and ommisions in URL handling

2004-07-28  Steve Harris  <steve@plugin.org.uk>

	* send.c, server.c: added code to handle UNIX domain sockets.

2004-07-12  Steve Harris  <steve@plugin.org.uk>
