@@ -9,7 +9,7 @@ DIE=0
 if [ -n "$GNOME2_DIR" ]; then
 	ACLOCAL_FLAGS="-I $GNOME2_DIR/share/aclocal $ACLOCAL_FLAGS"
 	LD_LIBRARY_PATH="$GNOME2_DIR/lib:$LD_LIBRARY_PATH"
-	PATH="$GNOME2_DIR/bin:$PATH"
+	PATH="$GNOME2_DIR/bin:/opt/local/bin:$PATH"
 	export PATH
 	export LD_LIBRARY_PATH
 fi
