@@ -1,3 +1,7 @@
+2005-02-03  Taybin Rutkin <taybin@earthlink.net>
+
+	* server.c: commited resource leak fix from Jesse Campbell
+
 2005-01-22  Steve Harris  <steve@plugin.org.uk>
 
 	* address.c: fixed bug when determining protocol of URL with
